Starting new theme

--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -16,7 +16,7 @@ html {
       }
 
       .icons {
-        @include icons(black-on-white, $white, $black);
+        @include icons(black-on-white);
       }
     }
   }
