Tangram map added

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -139,6 +139,15 @@
 
 
 
+  <section class="map">
+  <h3>Map</h3>
+
+  
+<div id="tangram"></div>
+
+</section>
+
+
   
   <section class="monogram">
   <!-- Modify here -->
@@ -234,6 +243,10 @@
 
 
 
+    <script src="/assets/scripts/leaflet.js"></script>
+  
+    <script src="/assets/scripts/tangram.min.js"></script>
+  
     <script src="/assets/scripts/site.min.js"></script>
   
 
