--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -143,6 +143,10 @@
 
 
 
+    <script src="/assets/scripts/leaflet.js"></script>
+  
+    <script src="/assets/scripts/tangram.min.js"></script>
+  
     <script src="/assets/scripts/site.min.js"></script>
   
 
