Tuning mapzen / tangram / leafletjs

--- a/site/components/project/icons/icons.scss
+++ b/site/components/project/icons/icons.scss
@@ -1,4 +1,7 @@
 @mixin icons($color-scheme) {
+  position: relative;
+  z-index: 2;
+  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
