--- a/site/components/framework/structure/map/tangram/tangram.scss
+++ b/site/components/framework/structure/map/tangram/tangram.scss
@@ -1,1 +1,9 @@
-@mixin tangram {}
+@mixin tangram($width, $height) {
+  width: $width;
+  height: $height;
+
+  canvas {
+    width: $width;
+    height: $height;
+  }
+}
