--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -12,7 +12,7 @@ html {
       align-items: center;
 
       .map {
-        @include map(100vw, 100vh);
+        @include map(100px, 100px);
       }
 
       .monogram {
