White on brown deployed

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -9,14 +9,14 @@
 
     <!-- Modify here -->
     <title>Josh Wink - DJ &amp; Producer</title>
-    <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="/assets/images/josh-wink.jpg" />
-<link rel="icon" sizes="196x196" href="/assets/images/josh-wink.jpg">
+    <link rel="shortcut icon" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/josh-wink.jpg" />
+<link rel="icon" sizes="196x196" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/josh-wink.jpg">
 
   </head>
 
@@ -250,7 +250,7 @@
 
 
 
-    <script src="/assets/scripts/site.min.js"></script>
+    <script src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/scripts/site.min.js"></script>
   
 
 </body>
