--- a/site/components/project/templates/head/__favicon/--simple/head__favicon--simple.html
+++ b/site/components/project/templates/head/__favicon/--simple/head__favicon--simple.html
@@ -1,2 +1,2 @@
-<link rel="shortcut icon" href="/assets/images/" />
-<link rel="icon" sizes="196x196" href="/assets/images/">
+<link rel="shortcut icon" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/" />
+<link rel="icon" sizes="196x196" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/">
