--- a/site/components/framework/design/typography/elements/link/link.html
+++ b/site/components/framework/design/typography/elements/link/link.html
@@ -14,4 +14,4 @@
 
   
 
-  <a class="link" href="/" title=""></a>
+  <a class="link" href="http://metamn.io/themes/monogram-cube/white-on-brown/" title=""></a>
