--- a/site/components/framework/structure/figure/--loading/figure--loading.scss
+++ b/site/components/framework/structure/figure/--loading/figure--loading.scss
@@ -2,7 +2,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-color: #000;
-  background-image: url("/assets/images/spinner.svg");
+  background-image: url("http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/spinner.svg");
 
   &--loaded {
     background: transparent;
