--- a/site/components/project/avatar/__image/avatar__image.html
+++ b/site/components/project/avatar/__image/avatar__image.html
@@ -1,4 +1,4 @@
 <figure class="avatar__image">
   <!-- Modify here -->
-  <img class="img" src="/assets/images/" alt="">
+  <img class="img" src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/" alt="">
 </figure>
