--- a/site/components/project/templates/head/head.html
+++ b/site/components/project/templates/head/head.html
@@ -9,14 +9,14 @@
 
     <!-- Modify here -->
     <title> - </title>
-    <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="/assets/images/" />
-<link rel="icon" sizes="196x196" href="/assets/images/">
+    <link rel="shortcut icon" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/" />
+<link rel="icon" sizes="196x196" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/">
 
   </head>
 
