Favicons added together with a new gulp task to copy them to destination

--- a/site/components/framework/structure/icon/icon.html
+++ b/site/components/framework/structure/icon/icon.html
@@ -1,7 +1,7 @@
 <div class="icon">
   
 
-  <img class="icon__image" src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/.svg" alt="">
+  <img class="icon__image" src="/assets/images/.svg" alt="">
 
   
 </div>
