--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -9,14 +9,14 @@
 
     <!-- Modify here -->
     <title> - </title>
-    <link href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="/assets/styles/site.css" media="screen, projection" rel="stylesheet" type="text/css" />
 
     
 
     <!-- Modify here -->
     
-    <link rel="shortcut icon" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/" />
-<link rel="icon" sizes="196x196" href="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/">
+    <link rel="shortcut icon" href="/assets/images/" />
+<link rel="icon" sizes="196x196" href="/assets/images/">
 
   </head>
 
@@ -143,7 +143,7 @@
 
 
 
-    <script src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/scripts/site.min.js"></script>
+    <script src="/assets/scripts/site.min.js"></script>
   
 
 </body>
