--- a/site/components/framework/design/decorations/button/button.html
+++ b/site/components/framework/design/decorations/button/button.html
@@ -16,6 +16,6 @@
 
   
 
-  <a class="link" href="http://metamn.io/themes/monogram-cube/white-on-brown/" title=""></a>
+  <a class="link" href="/" title=""></a>
 
 </div>
