--- a/site/components/project/avatar/avatar.html
+++ b/site/components/project/avatar/avatar.html
@@ -4,7 +4,7 @@
   
   <figure class="avatar__image">
   <!-- Modify here -->
-  <img class="img" src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/images/" alt="">
+  <img class="img" src="/assets/images/" alt="">
 </figure>
 
   <aside class="avatar__text">
