--- a/site/components/project/templates/scripts/scripts.html
+++ b/site/components/project/templates/scripts/scripts.html
@@ -2,7 +2,7 @@
 
 
 
-    <script src="http://metamn.io/themes/monogram-cube/white-on-brown/assets/scripts/site.min.js"></script>
+    <script src="/assets/scripts/site.min.js"></script>
   
 
 </body>
