--- a/site/components/project/cube/__wrap/cube3d/__face/cube3d__face.scss
+++ b/site/components/project/cube/__wrap/cube3d/__face/cube3d__face.scss
@@ -1,7 +1,8 @@
-@mixin cube3d__face($size) {
+@mixin cube3d__face($size, $color-for-background-faces) {
   position: absolute;
   width: $size;
   height: $size;
+  background: $color-for-background-faces;
 
   &--front {
     transform: rotateX(90deg) translateZ($size / 2);
