--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -253,9 +253,37 @@
       
         <div class="cube3d__face cube3d__face--left">
           
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href="http://medium.com"> with your real data <a href="http://medium.com<your-data>"> -->
+            
+            <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://instagram.com" title="Instagram">
+  
+
+  <svg class="icomoon__icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
+
+  </a>
+</div>
+
+          
         </div>
       
         <div class="cube3d__face cube3d__face--right">
+          
+            <!-- Modify here -->
+            <!-- Replace dummy data like <a href="http://instagram.com"> with your real data <a href="http://instagram.com<your-data>"> -->
+            
+            <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://facebook.com" title="Facebook">
+  
+
+  <svg class="icomoon__icon icon-facebook-official"><use xlink:href="#icon-facebook-official"></use></svg>
+
+  </a>
+</div>
+
           
         </div>
       
