Ready to add manual rotation to the cube

--- a/site/components/framework/design/colors/colors.scss
+++ b/site/components/framework/design/colors/colors.scss
@@ -25,6 +25,12 @@ $lightbrown: rgba(164, 130, 93, 0.5);
     
   }
 
+  @if ($name == 'brown-on-white') {
+    color: $brown;
+    background-color: $white;
+    
+  }
+
 }
 
 // Color classes
@@ -47,6 +53,12 @@ $lightbrown: rgba(164, 130, 93, 0.5);
 .white-on-brown {
   color: $white;
   background-color: $brown;
+  
+}
+
+.brown-on-white {
+  color: $brown;
+  background-color: $white;
   
 }
 
