--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -13,7 +13,7 @@ html {
       }
 
       .cube {
-        @include cube(white-on-brown, $lightbrown, $lem * 4);
+        @include cube(white-on-brown, brown-on-white, $lightbrown, $lem * 4);
         padding: 0 0 10vh 15vw;
       }
     }
