--- a/site/components/project/cube/__wrap/cube3d/__face/cube3d__face.scss
+++ b/site/components/project/cube/__wrap/cube3d/__face/cube3d__face.scss
@@ -1,8 +1,30 @@
-@mixin cube3d__face($size, $color-for-background-faces) {
+@mixin cube3d__face($size, $color-scheme, $color-scheme-hover, $color-for-background-faces) {
   position: absolute;
   width: $size;
   height: $size;
   background: $color-for-background-faces;
+
+  border: 1px solid;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .icomoon {
+    @include icomoon($lem, $color-scheme);
+  }
+
+  &.mouseover {
+    @include colors($color-scheme-hover);
+
+    .icomoon {
+      @include icomoon($lem, $color-scheme-hover);
+    }
+  }
+
+
+
+
 
   &--front {
     transform: rotateX(90deg) translateZ($size / 2);
@@ -27,4 +49,6 @@
   &--right {
     transform: rotateX(-90deg) translateZ($size / 2) rotate(180deg);
   }
+
+
 }
