--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -297,6 +297,8 @@
 
 
 
+    <script src="/assets/scripts/hammer.min.js"></script>
+  
     <script src="/assets/scripts/site.min.js"></script>
   
 
