--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -162,6 +162,8 @@
 
 
 
+    <script src="/assets/scripts/hammer.min.js"></script>
+  
     <script src="/assets/scripts/site.min.js"></script>
   
 
