--- a/site/components/project/cube/__wrap/cube3d/cube3d.scss
+++ b/site/components/project/cube/__wrap/cube3d/cube3d.scss
@@ -5,6 +5,7 @@
   width: $size;
   transition: transform 1.5s linear;
   transform-style: preserve-3d;
+  transform: rotateX(0deg) rotateY(0deg);
 
 
   &__face {
