--- a/site/components/project/templates/scripts/scripts.html
+++ b/site/components/project/templates/scripts/scripts.html
@@ -2,6 +2,8 @@
 
 
 
+    <script src="/assets/scripts/three.min.js"></script>
+  
     <script src="/assets/scripts/hammer.min.js"></script>
   
     <script src="/assets/scripts/site.min.js"></script>
