Polyhedras are displayed well

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -169,7 +169,9 @@
   <section class="cube">
   <h3>Cube</h3>
 
-  <div class="cube__container"></div>
+  <div class="cube__container">
+    
+  </div>
 </section>
 
 
@@ -178,7 +180,7 @@
 
 
 
-    <script src="/assets/scripts/three.min.js"></script>
+    <script src="/assets/scripts/Three58.js"></script>
   
     <script src="/assets/scripts/hammer.min.js"></script>
   
