--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -162,7 +162,7 @@
 
 
 
-    <script src="/assets/scripts/three.min.js"></script>
+    <script src="/assets/scripts/Three58.js"></script>
   
     <script src="/assets/scripts/hammer.min.js"></script>
   
