SVG polyhedron started

--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -162,7 +162,9 @@
 
 
 
-    <script src="/assets/scripts/Three58.js"></script>
+    <script src="/assets/scripts/svgml3d.js"></script>
+  
+    <script src="/assets/scripts/platonic.js"></script>
   
     <script src="/assets/scripts/hammer.min.js"></script>
   
