--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -169,7 +169,85 @@
   <section class="cube">
   <h3>Cube</h3>
 
-  <div class="cube__container">
+  <div class="cube__icons">
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="mailto:"> with your real data <a href="mailto:<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="mailto:" title="Email">
+  
+
+  <svg class="icomoon__icon icon-envelope"><use xlink:href="#icon-envelope"></use></svg>
+
+  </a>
+</div>
+
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://github.com"> with your real data <a href="http://github.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://github.com" title="Github">
+  
+
+  <svg class="icomoon__icon icon-github"><use xlink:href="#icon-github"></use></svg>
+
+  </a>
+</div>
+
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://twitter.com"> with your real data <a href="http://twitter.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://twitter.com" title="Twitter">
+  
+
+  <svg class="icomoon__icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
+
+  </a>
+</div>
+
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://medium.com"> with your real data <a href="http://medium.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://medium.com" title="Medium">
+  
+
+  <svg class="icomoon__icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
+
+  </a>
+</div>
+
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://instagram.com"> with your real data <a href="http://instagram.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://instagram.com" title="Instagram">
+  
+
+  <svg class="icomoon__icon icon-instagram"><use xlink:href="#icon-instagram"></use></svg>
+
+  </a>
+</div>
+
+    
+      <!-- Modify here -->
+      <!-- Replace dummy data like <a href="http://facebook.com"> with your real data <a href="http://facebook.com<your-data>"> -->
+      <div class="icomoon">
+  
+    <a class="icomoon__link" href="http://facebook.com" title="Facebook">
+  
+
+  <svg class="icomoon__icon icon-facebook-official"><use xlink:href="#icon-facebook-official"></use></svg>
+
+  </a>
+</div>
+
     
   </div>
 </section>
@@ -180,7 +258,9 @@
 
 
 
-    <script src="/assets/scripts/Three58.js"></script>
+    <script src="/assets/scripts/svgml3d.js"></script>
+  
+    <script src="/assets/scripts/platonic.js"></script>
   
     <script src="/assets/scripts/hammer.min.js"></script>
   
