--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -250,6 +250,9 @@
 
     
   </div>
+
+  
+  <embed class="cube__scene" width='500' height='500' name='Scene1' src="/assets/images/scene.svg" wmode='transparent' type='image/svg+xml' />
 </section>
 
 
@@ -258,7 +261,7 @@
 
 
 
-    <script src="/assets/scripts/svgml3d.js"></script>
+    <script src="/assets/scripts/svgvml3d.js"></script>
   
     <script src="/assets/scripts/platonic.js"></script>
   
