--- a/site/components/project/templates/default/default.html
+++ b/site/components/project/templates/default/default.html
@@ -162,7 +162,7 @@
 
 
 
-    <script src="/assets/scripts/svgml3d.js"></script>
+    <script src="/assets/scripts/svgvml3d.js"></script>
   
     <script src="/assets/scripts/platonic.js"></script>
   
