--- a/site/components/project/cube/cube.html
+++ b/site/components/project/cube/cube.html
@@ -4,4 +4,7 @@
   <div class="cube__icons">
     
   </div>
+
+  
+  <embed class="cube__scene" width='500' height='500' name='Scene1' src="/assets/images/scene.svg" wmode='transparent' type='image/svg+xml' />
 </section>
