--- a/site/components/project/templates/scripts/scripts.html
+++ b/site/components/project/templates/scripts/scripts.html
@@ -2,7 +2,7 @@
 
 
 
-    <script src="/assets/scripts/svgml3d.js"></script>
+    <script src="/assets/scripts/svgvml3d.js"></script>
   
     <script src="/assets/scripts/platonic.js"></script>
   
