Working on the tetrahedron

--- a/site/components/pages/home/index.scss
+++ b/site/components/pages/home/index.scss
@@ -11,8 +11,8 @@ html {
         @include monogram(30vh, 30vh, 0);
       }
 
-      .cube {
-        @include cube;
+      .icons {
+        @include icons;
       }
     }
   }
