--- a/site/components/framework/structure/polyhedra/polyhedron/--tetrahedron/polyhedron--tetrahedron.scss
+++ b/site/components/framework/structure/polyhedra/polyhedron/--tetrahedron/polyhedron--tetrahedron.scss
@@ -5,10 +5,10 @@
   .polyhedron__face:nth-child(2) {
     transform: translate(-25px, -44px) rotate(-60deg) rotateX(110deg);
   }
-  .polyhedron__:nth-child(3) {
+  .polyhedron__face:nth-child(3) {
     transform: translate(25px, -44px) rotate(60deg) rotateX(110deg);
   }
-  .polyhedron__:nth-child(4) {
+  .polyhedron__face:nth-child(4) {
     transform: rotate(180deg) rotateX(110deg);
   }
 }
