--- a/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
+++ b/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
@@ -22,6 +22,10 @@
   &__triangle {
     @include polyhedron__triangle;
   }
+
+  &--tetrahedron {
+    @include polyhedron--tetrahedron;
+  }
 }
 
 @keyframes polyhedron-rotate {
