--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -174,21 +174,26 @@
   <h3>Polyhedra</h3>
 
   
-    <div class="polyhedron polyhedron--tetrahedron">
+    <div class="polyhedron polyhedron--hexahedron">
   <div class="polyhedron-container">
     
-      <div class="polyhedron__face polyhedron__triangle"></div>
+      <div class="polyhedron__face polyhedron__square"></div>
     
-      <div class="polyhedron__face polyhedron__triangle"></div>
+      <div class="polyhedron__face polyhedron__square"></div>
     
-      <div class="polyhedron__face polyhedron__triangle"></div>
+      <div class="polyhedron__face polyhedron__square"></div>
     
-      <div class="polyhedron__face polyhedron__triangle"></div>
+      <div class="polyhedron__face polyhedron__square"></div>
+    
+      <div class="polyhedron__face polyhedron__square"></div>
+    
+      <div class="polyhedron__face polyhedron__square"></div>
     
   </div>
 </div>
 
   
+
 </aside>
 
 </section>
