--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -174,20 +174,24 @@
   <h3>Polyhedra</h3>
 
   
-    <div class="polyhedron polyhedron--hexahedron">
+    <div class="polyhedron polyhedron--octahedron">
   <div class="polyhedron-container">
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__square"></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
   </div>
 </div>
