--- a/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
+++ b/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
@@ -34,6 +34,10 @@
   &--hexahedron {
     @include polyhedron--hexahedron;
   }
+
+  &--octahedron {
+    @include polyhedron--octahedron;
+  }
 }
 
 @keyframes polyhedron-rotate {
