--- a/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
+++ b/site/components/framework/structure/polyhedra/polyhedron/polyhedron.scss
@@ -46,6 +46,10 @@
   &--dodecahedron {
     @include polyhedron--dodecahedron;
   }
+
+  &--icosahedron {
+    @include polyhedron--icosahedron;
+  }
 }
 
 @keyframes polyhedron-rotate {
