--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -174,32 +174,48 @@
   <h3>Polyhedra</h3>
 
   
-    <div class="polyhedron polyhedron--dodecahedron">
+    <div class="polyhedron polyhedron--icosahedron">
   <div class="polyhedron-container">
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
-      <div class="polyhedron__face polyhedron__pentagon"><span></span></div>
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
+    
+      <div class="polyhedron__face polyhedron__triangle"></div>
     
   </div>
 </div>
