Ready to personalize

--- a/site/components/pages/home/index.html
+++ b/site/components/pages/home/index.html
@@ -174,40 +174,8 @@
   <h3>Polyhedra</h3>
 
   
-    <div class="polyhedron polyhedron--icosahedron">
+    <div class="polyhedron polyhedron--tetrahedron">
   <div class="polyhedron-container">
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
-    
-      <div class="polyhedron__face polyhedron__triangle"></div>
     
       <div class="polyhedron__face polyhedron__triangle"></div>
     
